--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,44 @@
-.button{
-    padding: 5px;
-    border-radius: 30px;
-    background-color: white;
-    color: black;
-    border: 2px solid black; 
+body{
+    width: 400px;
+    height: 300px;
+    background-color: #FFFDD0;
+    vertical-align: center;
 }
+
+.nav{
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    top: 0;
+    left: 0;
+    background-color: #c9d8d7;
+    padding: 15px;
+    box-shadow: black 1px;
+}
+
+.clear{
+    color: #c9d8d7;
+}
+
+.header{
+    align-self: center;
+    font-size: 20px;
+}
+
+.link{
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+    border: 5px;
+    align-self: right;
+}
+
+.homepage{
+    position: absolute;
+    top: 30%;
+    font-size: 20px;
+    color: black;
+    padding: 10px;
+}
+
 
