--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     width: 400px;
-    height: 300px;
+    height: 450px;
     background-color: #FFFDD0;
     vertical-align: center;
 }
@@ -23,6 +23,8 @@ body{
 .header{
     align-self: center;
     font-size: 20px;
+    color: black;
+    text-decoration: none;
 }
 
 .link{
@@ -30,15 +32,24 @@ body{
     color: black;
     text-decoration: none;
     border: 5px;
-    align-self: right;
 }
 
 .homepage{
     position: absolute;
-    top: 30%;
+    top: 10%;
     font-size: 20px;
     color: black;
-    padding: 10px;
+
 }
 
+.twohead{
+    margin-bottom: -100px;;
+}
+
+.nologin{
+    position: absolute;
+    top: 40%;
+    font-size: 20px;
+    color: black;
+}
 
