--- a/newTry/secPage.css
+++ b/newTry/secPage.css
@@ -2,7 +2,7 @@
 
 body{
 height: 450px;
-width: 400px;
+width: 385px;
 background-color: #F7F1CF;
 }
 
@@ -208,6 +208,19 @@ cursor:pointer;
     cursor:pointer;
     }
     
+#Note{
+    position: absolute;
+    left: 50px;
+    top: 300px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 100;
+    font-size: 24px;
+    line-height: 28px;
+    
+    color: #000000;
+}
+
     .backc{
     position: absolute;
     width: 52px;
