--- a/Design3/checkPass/checkPass.css
+++ b/Design3/checkPass/checkPass.css
@@ -30,7 +30,7 @@ body {
     left: 19.5px;
     top: 189.1px;
 
-    background: #FFFFFF;
+    background: #B1FEB0;
     border-radius: 15px;
 }
 
@@ -85,6 +85,8 @@ body {
     font-weight: 400;
     font-size: 36px;
     line-height: 53px;
+    text-decoration: none;
+
     display: flex;
     align-items: center;
     text-align: center;
@@ -101,26 +103,6 @@ body {
 
     background: #FFFFFF;
     border-radius: 15px;
-}
-
-.label {
-    position: absolute;
-    width: 236.14px;
-    height: 199.84px;
-    left: 125.44px;
-    top: 127.14px;
-
-    font-family: 'Mplus 1p';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 18px;
-
-    display: flex;
-    align-items: center;
-    text-align: center;
-
-    color: #000000;
 }
 
 .login {
@@ -185,3 +167,79 @@ body {
     color: #000000;
 }
 
+/* individueller Teil */
+
+.smallheader {
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 252px;
+    height: 38px;
+    left: 117.29px;
+    top: 121.14px;
+
+    background: #FEFFBA;
+    border: 0.5px solid #000000;
+    border-radius: 15px;
+}
+
+.headertext {
+    position: absolute;
+    width: 232px;
+    height: 27px;
+    left: 150px;
+    top: 127px;
+
+    font-family: 'Mplus 1p';
+    font-style: normal;
+    font-size: 18px;
+    line-height: 18px;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+}
+
+.favWord {
+    position: absolute;
+    width: 230px;
+    height: 38px;
+    left: 125px;
+    top: 185px;
+    border: 0.5px solid #000000;
+    border-radius: 15px;
+    padding-left: 10px;
+}
+
+.favSym {
+    position: absolute;
+    width: 230px;
+    height: 38px;
+    left: 125px;
+    top: 237px;
+    border: 0.5px solid #000000;
+    border-radius: 15px;
+    padding-left: 10px;
+}
+
+.sumbit {
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 75px;
+    height: 35px;
+    left: 282px;
+    top: 290px;
+
+    background: #FEFFBA;
+    border: 1px solid #525252;
+    border-radius: 15px;
+}
+
+#note{
+    position: absolute;
+    top: 250px;
+    left: 125px;
+}
