--- a/Design3/checkPass/checkPass.css
+++ b/Design3/checkPass/checkPass.css
@@ -178,7 +178,7 @@ body {
     left: 117.29px;
     top: 121.14px;
 
-    background: #FEFFBA;
+    background: #B1FEB0;
     border: 0.5px solid #000000;
     border-radius: 15px;
 }
@@ -233,7 +233,7 @@ body {
     left: 282px;
     top: 290px;
 
-    background: #FEFFBA;
+    background: #B1FEB0;
     border: 1px solid #525252;
     border-radius: 15px;
 }
