--- a/Design3/getPass/getPass.css
+++ b/Design3/getPass/getPass.css
@@ -205,12 +205,13 @@ border-radius: 15px;
 .favWord{
     position: absolute;
     width: 230px;
-    height: 38px;
+    height: 30px;
     left: 125px;
     top: 185px;
-    border: 0.5px solid #000000;
-    border-radius: 15px;
+    border: none;
+    border-bottom: 0.5px solid #000000;
     padding-left: 10px;
+    padding-bottom: 5px;
 }
 
 .favSym{
@@ -219,9 +220,18 @@ border-radius: 15px;
     height: 38px;
     left: 125px;
     top: 237px;
-    border: 0.5px solid #000000;
-    border-radius: 15px;
+    border: none;
+    border-bottom: 0.5px solid #000000;
     padding-left: 10px;
+}
+
+::placeholder{
+    color: black;
+    opacity: 25%;
+}
+
+textarea:focus, input:focus{
+    outline: none;
 }
 
 .sumbit{
@@ -236,6 +246,8 @@ border-radius: 15px;
     background: #FEFFBA;
     border: 1px solid #525252;
     border-radius: 15px;
+
+    cursor:pointer;
 }
 
 
